--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,27 @@
 /*Schrijf hier jouw eigen CSS*/
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.container-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
